# mono-core

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  OWNERS  README.md  eslint.config.mjs  maven_install.json  package.json  pnpm-lock.yaml  stylelint.config.mjs  tsconfig.json
.forgejo/workflows/: README.md  build_bazelisk_image.yml
common/common_ts_libs/: BUILD  README.md  equality.ts  optional.test.ts  optional.ts  package.json  wrap_promise.ts  wrap_to_result.test.ts  wrap_to_result.ts
common/package/: package_v1_pb.ts
docker/: Dockerfile  README.md  bazelisk.Dockerfile  ubuntu-js-tools.Dockerfile
game_project/minecraft_bot/: BUILD.bazel  bot.ts
game_project/minecraft_bot/tools/: BUILD.bazel  chat.ts  clear_and_flatten_area.ts  collect_block.ts  find_player.ts  goto_user.ts  make_house.ts  tool.ts  tools.ts
game_project/project_imperator/server/: main.ts
google/protobuf/: timestamp_pb.ts
sub_project/buf_generate/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  buf_generate.go  defs.bzl  go.mod
sub_project/buf_generate/example/: BUILD.bazel
tools/format/: BUILD.bazel
tools/lint/: linters.bzl
tools/typescript/: BUILD.bazel  files.bzl  jest.config.js  jest_test.sh.template  ts_lib.bzl  ts_test.bzl  tsc.bzl
