load("@npm//:jest/package_json.bzl", jest = "bin")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "jest.config.js",
    ]
)

exports_files(
    glob([
        "*.sh",
        "*.sh.template",
    ]),
)


jest.jest_binary(
    name = "jest",
    # Include this js_library and its dependencies in the runfiles (runtime dependencies)
    data = [
        ":jest.config.js",
        "//:node_modules/jest",
        "//:node_modules/@jest/globals",
        "//:node_modules/ts-jest",
        "//:node_modules/ts-node",
        "//:node_modules/jest-environment-jsdom",
    ],
    fixed_args = [
        "--silent=false",
        "--verbose=true",
    ],
)